@@ -1,7 +1,8 @@
 v0.7.0, 2019-10-?? -- fall cleaning
  * removed the following deprecated code:
    * useless local_tmp_dir arg to GCSFilesystem
-
+   * TODO: remove interpreter option
+     * removed mr_wc.rb from examples
 
 v0.6.12, 2019-10-23 -- unbreak Google
  * default image_version on Dataproc is now 1.3 (#2110)
